<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    tool:context=".RegisterActivity"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:background="@android:color/black">

        <ImageView
            android:id="@+id/imageRetour"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="15dp"
            android:paddingTop="10dp"
            android:src="@drawable/icons8_gauche_24"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/cr_er_un_compte"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="75dp"
            android:layout_height="75dp"
            app:srcCompat="@drawable/baseline_login_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="45dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/personne" />

            <EditText
                android:id="@+id/editTextText3"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/pr_nom"
                android:textColor="#7B595555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewnom"
                android:layout_width="45dp"
                android:layout_height="55dp"
                app:srcCompat="@drawable/personne" />

            <EditText
                android:id="@+id/editTextTextnom"
                android:layout_width="337dp"
                android:layout_height="48dp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:inputType="text"
                android:hint="@string/nom"
                android:textColor="#7B595555" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/enveloppe" />

            <EditText
                android:id="@+id/editTextText4"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:hint="@string/email"
                android:textColor="#7B595555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/icon_mdp" />

            <EditText
                android:id="@+id/editText5"
                android:layout_width="336dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:hint="@string/mot_de_passe"
                android:textColor="#7B595555" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/telephone" />

            <Spinner
                android:id="@+id/editText7"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:entries="@array/country_codes"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#7B595555" />

            <EditText
                android:id="@+id/editText8"
                android:layout_width="221dp"
                android:layout_height="48dp"
                android:inputType="text"
                android:hint="@string/mobile"
                android:textColor="#7B595555" />
        </LinearLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            app:backgroundTint= "@color/Orange"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/valider"
            />

    </LinearLayout>


</LinearLayout>